--- a/EmployeeCrud/src/app/employee/employee.component.html
+++ b/EmployeeCrud/src/app/employee/employee.component.html
@@ -76,7 +76,7 @@
 
         <br>
 
-        <button type="button" class="btn btn-primary btn-block"  (click)="onSubmit(obj)">Submit</button>
+        <button type="button" class="btn btn-secondary btn-block"  (click)="onSubmit(obj)">Submit</button>
 
         <button type="button" class="btn btn-info btn-block" (click)="onReset()">Reset</button>
 
